--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,7 @@ Paragraph default: 1.6
 --- 06 BORDER-RADIUS
 
 Default: 9px
+Medium: 11px
 
 --- 07 WHITESPACE
 
@@ -168,4 +169,8 @@ body {
 
 .margin--right-sm {
   margin-right: 1.6rem !important;
+}
+
+stron {
+  font-weight: 500;
 }
