--- a/css/general.css
+++ b/css/general.css
@@ -27,7 +27,11 @@ Paragraph default: 1.6
 - Tints: #fdf2e9, #fae5d3, #eb984e
 - Shades: #cf711f, #45260a
 - Accents:
-- Greys: #555, #333, #6f6f6f (lighest grey allowed on #fdf2e9)
+- Greys: #888
+#767676 (lighest grey allowed on #fff)
+#6f6f6f (lighest grey allowed on #fdf2e9)
+#555
+#333
 
 --- 05 SHADOWS
 
@@ -93,6 +97,10 @@ body {
 
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .grid--center-v {
