--- a/css/general.css
+++ b/css/general.css
@@ -16,6 +16,7 @@ Default: 1
 Small: 1.05
 Medium: 1.2
 Paragraph default: 1.6
+Large: 1.8
 
 - Letter spacing:
 -0.5px
@@ -58,6 +59,8 @@ Medium: 11px
 html {
   /* font-size: 10px; */
   font-size: 62.5%;
+
+  overflow-x: hidden;
 }
 
 body {
@@ -65,6 +68,8 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  overflow-x: hidden;
 }
 
 /******************************/
@@ -229,6 +234,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
