--- a/css/general.css
+++ b/css/general.css
@@ -1,36 +1,44 @@
 /*
-
 --- 01 TYPOGRAPHY SYSTEM
 
 - Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
-- Font weights:
+- Font weights
 Default: 400
 Medium: 500
 Semi-bold: 600
 Bold: 700
 
-- Line heights:
+- Line heights
 Default: 1
 Small: 1.05
 Medium: 1.2
 Paragraph default: 1.6
 Large: 1.8
 
-- Letter spacing:
+- Letter spacing
 -0.5px
 0.75px
 
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints: #fdf2e9, #fae5d3, #eb984e
-- Shades: #cf711f, #45260a
+- Tints:
+#fdf2e9
+#fae5d3
+#eb984e
+
+- Shades: 
+#cf711f
+#45260a
+
 - Accents:
-- Greys: #888
-#767676 (lighest grey allowed on #fff)
-#6f6f6f (lighest grey allowed on #fdf2e9)
+- Greys
+
+#888
+#767676 (lightest grey allowed on #fff)
+#6f6f6f (lightest grey allowed on #fdf2e9)
 #555
 #333
 
@@ -45,9 +53,8 @@ Medium: 11px
 
 --- 07 WHITESPACE
 
-- Spacing system(px)
+- Spacing system (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
 */
 
 * {
@@ -58,9 +65,13 @@ Medium: 11px
 
 html {
   /* font-size: 10px; */
-  font-size: 62.5%;
 
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
+  font-size: 62.5%;
   overflow-x: hidden;
+
+  /* Does NOT work on Safari */
   /* scroll-behavior: smooth; */
 }
 
@@ -70,24 +81,32 @@ body {
   font-weight: 400;
   color: #555;
 
+  /* Only works if there is nothing absolutely positioned in relation to body */
   overflow-x: hidden;
 }
 
-/******************************/
-/* GENERAL REUSABLE COMPONENTS */
-/******************************/
+/**************************/
+/* GENRAL REUSABLE COMPONENTS */
+/**************************/
 
 .container {
+  /* 1140px */
   max-width: 120rem;
-  margin: 0 auto;
   padding: 0 3.2rem;
+  margin: 0 auto;
 }
 
 .grid {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+
+  /* margin-bottom: 9.6rem; */
 }
+
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
 
 .grid:not(:last-child) {
   margin-bottom: 9.6rem;
@@ -105,9 +124,9 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.grid--5-cols {
+/* .grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
-}
+} */
 
 .grid--center-v {
   align-items: center;
@@ -118,6 +137,8 @@ body {
 .heading-tertiary {
   font-weight: 700;
   color: #333;
+  /* color: #45260a; */
+  /* color: #343a40; */
   letter-spacing: -0.5px;
 }
 
@@ -153,16 +174,20 @@ body {
 .btn:link,
 .btn:visited {
   display: inline-block;
+
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
+  /* Only necessary for .btn */
   border: none;
   cursor: pointer;
   font-family: inherit;
 
+  /* Put transition on original "state" */
+  /* transition: background-color 0.3s; */
   transition: all 0.3s;
 }
 
@@ -170,7 +195,6 @@ body {
 .btn--full:visited {
   background-color: #e67e22;
   color: #fff;
-  margin-right: 1.6rem;
 }
 
 .btn--full:hover,
@@ -187,6 +211,10 @@ body {
 .btn--outline:hover,
 .btn--outline:active {
   background-color: #fdf2e9;
+
+  /* border: 3px solid #fff; */
+
+  /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
 }
 
@@ -198,7 +226,7 @@ body {
 }
 
 .btn--form:hover {
-  background-color: white;
+  background-color: #fff;
   color: #555;
 }
 
@@ -216,11 +244,6 @@ body {
 .link:active {
   color: #cf711f;
   border-bottom: 1px solid transparent;
-}
-
-*:focus {
-  outline: none;
-  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 .list {
@@ -244,8 +267,14 @@ body {
   color: #e67e22;
 }
 
-/* HELPER/SETTINGS CLASSES */
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22; */
+  /* outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
 
+/* HELPER/SETTINGS CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
