--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/******************************/
+/**************************/
 /* HEADER */
-/******************************/
+/**************************/
 
 .header {
   display: flex;
@@ -8,6 +8,7 @@
   align-items: center;
   background-color: #fdf2e9;
 
+  /* Because we want header to be sticky later */
   height: 9.6rem;
   padding: 0 4.8rem;
   position: relative;
@@ -17,9 +18,9 @@
   height: 2.2rem;
 }
 
-/******************************/
+/**************************/
 /* NAVIGATION */
-/******************************/
+/**************************/
 
 .main-nav-list {
   list-style: none;
@@ -47,7 +48,7 @@
 .main-nav-link.nav-cta:visited {
   padding: 1.2rem 2.4rem;
   border-radius: 9px;
-  color: white;
+  color: #fff;
   background-color: #e67e22;
 }
 
@@ -57,7 +58,6 @@
 }
 
 /* MOBILE */
-
 .btn-mobile-nav {
   border: none;
   background: none;
@@ -76,9 +76,27 @@
   display: none;
 }
 
-/******************************/
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
+/**************************/
 /* HERO SECTION */
-/******************************/
+/**************************/
 
 .section-hero {
   background-color: #fdf2e9;
@@ -138,9 +156,9 @@
   font-weight: 700;
 }
 
-/******************************/
+/**************************/
 /* FEATURED IN SECTION */
-/******************************/
+/**************************/
 
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
@@ -167,9 +185,9 @@
   opacity: 50%;
 }
 
-/******************************/
+/**************************/
 /* HOW IT WORKS SECTION */
-/******************************/
+/**************************/
 
 .section-how {
   padding: 9.6rem 0;
@@ -191,7 +209,7 @@
   position: relative;
 
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -208,7 +226,11 @@
 
 .step-img-box::before {
   width: 60%;
+  /* height: 60%; */
+
+  /* 60% of parent's width */
   padding-bottom: 60%;
+
   background-color: #fdf2e9;
   z-index: -2;
 }
@@ -222,11 +244,12 @@
 
 .step-img {
   width: 35%;
+  /* z-index: 10; */
 }
 
-/******************************/
+/**************************/
 /* MEALS SECTION */
-/******************************/
+/**************************/
 
 .section-meals {
   padding: 9.6rem 0;
@@ -236,11 +259,11 @@
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 11px;
   overflow: hidden;
+  transition: all 0.4s;
 }
 
 .meal:hover {
   transform: translateY(-1.2rem);
-  transition: all 0.4s;
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
 }
 
@@ -264,14 +287,12 @@
   font-weight: 600;
 }
 
-.tag--vegetarion {
+.tag--vegetarian {
   background-color: #51cf66;
 }
-
 .tag--vegan {
   background-color: #94d82d;
 }
-
 .tag--paleo {
   background-color: #ffd43b;
 }
@@ -312,9 +333,9 @@
   font-size: 1.8rem;
 }
 
-/******************************/
+/**************************/
 /* TESTIMONIALS SECTION */
-/******************************/
+/**************************/
 
 .section-testimonials {
   background-color: #fdf2e9;
@@ -372,9 +393,9 @@
   transform: scale(1.1);
 }
 
-/******************************/
-/* PRICING + FEATURES SECTION */
-/******************************/
+/**************************/
+/* MEALS SECTION */
+/**************************/
 
 .section-pricing {
   padding: 9.6rem 0;
@@ -382,6 +403,7 @@
 
 .pricing-plan {
   border-radius: 11px;
+
   width: 75%;
 }
 
@@ -403,6 +425,7 @@
   position: absolute;
   top: 6%;
   right: -18%;
+
   text-transform: uppercase;
   font-size: 1.4rem;
   font-weight: 700;
@@ -478,22 +501,28 @@
   line-height: 1.8;
 }
 
-/******************************/
+/**************************/
 /* CTA SECTION */
-/******************************/
+/**************************/
 
 .section-cta {
+  /* top / right / bottom / left */
+  /* padding: 9.6rem 0 12.8rem 0; */
+
+  /* top / horizontal / left */
   padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
   display: grid;
+  /* 2/3 = 66.6% + 1/3 = 33.3% */
   grid-template-columns: 2fr 1fr;
   /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
-  overflow: hidden;
+
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  overflow: hidden;
 }
 
 .cta-text-box {
@@ -501,15 +530,16 @@
   color: #45260a;
 }
 
+.cta .heading-secondary {
+  /* color: #45260a; */
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 4.8rem;
-}
-
-.cta .heading-secondary {
-  color: inherit;
-  margin-bottom: 3.2rem;
 }
 
 .cta-img-box {
@@ -559,9 +589,9 @@
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 
-/******************************/
-/* Footer */
-/******************************/
+/**************************/
+/* FOOTER */
+/**************************/
 
 .footer {
   padding: 12.8rem 0;
